[gd_scene load_steps=2 format=3 uid="uid://vtvbwlh1ednd"]

[ext_resource type="Script" path="res://Script/Data/Rates.gd" id="1_sosn7"]

[node name="RATES" type="ScrollContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_sosn7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ConversionPanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Label" type="Label" parent="VBoxContainer/ConversionPanelContainer"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "CONVERSIONRATES"

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "PERSECOND"

[node name="ConversionGridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 5

[node name="AirVBoxContainer" type="VBoxContainer" parent="VBoxContainer/ConversionGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/ConversionGridContainer/AirVBoxContainer"]
layout_mode = 2
text = "AIR"
horizontal_alignment = 1

[node name="AirRateLabel" type="Label" parent="VBoxContainer/ConversionGridContainer/AirVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="EnergyVBoxContainer" type="VBoxContainer" parent="VBoxContainer/ConversionGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/ConversionGridContainer/EnergyVBoxContainer"]
layout_mode = 2
text = "ENERGY"
horizontal_alignment = 1

[node name="EnergyRateLabel" type="Label" parent="VBoxContainer/ConversionGridContainer/EnergyVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="FishVBoxContainer" type="VBoxContainer" parent="VBoxContainer/ConversionGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/ConversionGridContainer/FishVBoxContainer"]
layout_mode = 2
text = "FISH"
horizontal_alignment = 1

[node name="FishRateLabel" type="Label" parent="VBoxContainer/ConversionGridContainer/FishVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="FoodVBoxContainer" type="VBoxContainer" parent="VBoxContainer/ConversionGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/ConversionGridContainer/FoodVBoxContainer"]
layout_mode = 2
text = "FOOD"
horizontal_alignment = 1

[node name="FoodRateLabel" type="Label" parent="VBoxContainer/ConversionGridContainer/FoodVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="FuelVBoxContainer" type="VBoxContainer" parent="VBoxContainer/ConversionGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/ConversionGridContainer/FuelVBoxContainer"]
layout_mode = 2
text = "FUEL"
horizontal_alignment = 1

[node name="FuelRateLabel" type="Label" parent="VBoxContainer/ConversionGridContainer/FuelVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="PlantVBoxContainer" type="VBoxContainer" parent="VBoxContainer/ConversionGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/ConversionGridContainer/PlantVBoxContainer"]
layout_mode = 2
text = "PLANTS"
horizontal_alignment = 1

[node name="PlantRateLabel" type="Label" parent="VBoxContainer/ConversionGridContainer/PlantVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="RepairVBoxContainer" type="VBoxContainer" parent="VBoxContainer/ConversionGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/ConversionGridContainer/RepairVBoxContainer"]
layout_mode = 2
text = "REPAIR"
horizontal_alignment = 1

[node name="RepairRateLabel" type="Label" parent="VBoxContainer/ConversionGridContainer/RepairVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="WasteVBoxContainer" type="VBoxContainer" parent="VBoxContainer/ConversionGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/ConversionGridContainer/WasteVBoxContainer"]
layout_mode = 2
text = "WASTE"
horizontal_alignment = 1

[node name="WasteRateLabel" type="Label" parent="VBoxContainer/ConversionGridContainer/WasteVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="WaterVBoxContainer" type="VBoxContainer" parent="VBoxContainer/ConversionGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/ConversionGridContainer/WaterVBoxContainer"]
layout_mode = 2
text = "WATER"
horizontal_alignment = 1

[node name="WaterRateLabel" type="Label" parent="VBoxContainer/ConversionGridContainer/WaterVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="WorkVBoxContainer" type="VBoxContainer" parent="VBoxContainer/ConversionGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/ConversionGridContainer/WorkVBoxContainer"]
layout_mode = 2
text = "WORK"
horizontal_alignment = 1

[node name="WorkRateLabel" type="Label" parent="VBoxContainer/ConversionGridContainer/WorkVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
horizontal_alignment = 1
